# promptology

./: .env.sample  README.md  compose.yml  pull_llm.py  pull_llm.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/promptology/: __main__.py  config.py  main.py
backend/src/promptology/agent/: prompter.py  reprompter.py
backend/src/promptology/api/: __init__.py  app.py
backend/src/promptology/cli/: __init__.py  commands.py  main.py
creative-prompts/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
creative-prompts/src/app/: api.ts  globals.css  layout.tsx  page.tsx
creative-prompts/src/app/api/generate-prompt/: route.ts
creative-prompts/src/app/api/health/: route.ts
creative-prompts/src/app/api/reprompt/: route.ts
